// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchAssetResults Should render it correctly if assets are empty 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <li
        class="MuiListItem-root MuiListItem-gutters"
      >
        <div
          class="MuiListItemText-root MuiListItemText-multiline"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2"
          >
            Your search did not match any documents.
          </h6>
          <span
            class="MuiTypography-root MuiTypography-caption MuiTypography-colorTextSecondary"
          >
            Make sure that all words are spelled correctly
          </span>
        </div>
      </li>
    </div>
  </body>,
  "container": <div>
    <li
      class="MuiListItem-root MuiListItem-gutters"
    >
      <div
        class="MuiListItemText-root MuiListItemText-multiline"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2"
        >
          Your search did not match any documents.
        </h6>
        <span
          class="MuiTypography-root MuiTypography-caption MuiTypography-colorTextSecondary"
        >
          Make sure that all words are spelled correctly
        </span>
      </div>
    </li>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`SearchAssetResults Should render it correctly if assets are not empty 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        aria-disabled="false"
        class="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-button"
        role="button"
        tabindex="0"
      >
        <div
          class="SearchAssetResults-icon-1"
        />
        <div
          class="MuiListItemText-root MuiListItemText-multiline"
        >
          <p
            class="MuiTypography-root MuiTypography-button"
          >
            Bitcoin
          </p>
          <span
            class="MuiTypography-root MuiTypography-caption"
          >
            BTC
          </span>
        </div>
        <span
          class="MuiTouchRipple-root"
        />
      </div>
      <div
        aria-disabled="false"
        class="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-button"
        role="button"
        tabindex="0"
      >
        <div
          class="SearchAssetResults-icon-1"
        />
        <div
          class="MuiListItemText-root MuiListItemText-multiline"
        >
          <p
            class="MuiTypography-root MuiTypography-button"
          >
            Binance Coin
          </p>
          <span
            class="MuiTypography-root MuiTypography-caption"
          >
            BNB
          </span>
        </div>
        <span
          class="MuiTouchRipple-root"
        />
      </div>
      <div
        aria-disabled="false"
        class="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-button"
        role="button"
        tabindex="0"
      >
        <div
          class="SearchAssetResults-icon-1"
        />
        <div
          class="MuiListItemText-root MuiListItemText-multiline"
        >
          <p
            class="MuiTypography-root MuiTypography-button"
          >
            Bitcoin Cash
          </p>
          <span
            class="MuiTypography-root MuiTypography-caption"
          >
            BCH
          </span>
        </div>
        <span
          class="MuiTouchRipple-root"
        />
      </div>
      <div
        aria-disabled="false"
        class="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-button"
        role="button"
        tabindex="0"
      >
        <div
          class="SearchAssetResults-icon-1"
        />
        <div
          class="MuiListItemText-root MuiListItemText-multiline"
        >
          <p
            class="MuiTypography-root MuiTypography-button"
          >
            Bitcoin SV
          </p>
          <span
            class="MuiTypography-root MuiTypography-caption"
          >
            BSV
          </span>
        </div>
        <span
          class="MuiTouchRipple-root"
        />
      </div>
      <div
        aria-disabled="false"
        class="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-button"
        role="button"
        tabindex="0"
      >
        <div
          class="SearchAssetResults-icon-1"
        />
        <div
          class="MuiListItemText-root MuiListItemText-multiline"
        >
          <p
            class="MuiTypography-root MuiTypography-button"
          >
            Binance USD
          </p>
          <span
            class="MuiTypography-root MuiTypography-caption"
          >
            BUSD
          </span>
        </div>
        <span
          class="MuiTouchRipple-root"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      aria-disabled="false"
      class="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-button"
      role="button"
      tabindex="0"
    >
      <div
        class="SearchAssetResults-icon-1"
      />
      <div
        class="MuiListItemText-root MuiListItemText-multiline"
      >
        <p
          class="MuiTypography-root MuiTypography-button"
        >
          Bitcoin
        </p>
        <span
          class="MuiTypography-root MuiTypography-caption"
        >
          BTC
        </span>
      </div>
      <span
        class="MuiTouchRipple-root"
      />
    </div>
    <div
      aria-disabled="false"
      class="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-button"
      role="button"
      tabindex="0"
    >
      <div
        class="SearchAssetResults-icon-1"
      />
      <div
        class="MuiListItemText-root MuiListItemText-multiline"
      >
        <p
          class="MuiTypography-root MuiTypography-button"
        >
          Binance Coin
        </p>
        <span
          class="MuiTypography-root MuiTypography-caption"
        >
          BNB
        </span>
      </div>
      <span
        class="MuiTouchRipple-root"
      />
    </div>
    <div
      aria-disabled="false"
      class="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-button"
      role="button"
      tabindex="0"
    >
      <div
        class="SearchAssetResults-icon-1"
      />
      <div
        class="MuiListItemText-root MuiListItemText-multiline"
      >
        <p
          class="MuiTypography-root MuiTypography-button"
        >
          Bitcoin Cash
        </p>
        <span
          class="MuiTypography-root MuiTypography-caption"
        >
          BCH
        </span>
      </div>
      <span
        class="MuiTouchRipple-root"
      />
    </div>
    <div
      aria-disabled="false"
      class="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-button"
      role="button"
      tabindex="0"
    >
      <div
        class="SearchAssetResults-icon-1"
      />
      <div
        class="MuiListItemText-root MuiListItemText-multiline"
      >
        <p
          class="MuiTypography-root MuiTypography-button"
        >
          Bitcoin SV
        </p>
        <span
          class="MuiTypography-root MuiTypography-caption"
        >
          BSV
        </span>
      </div>
      <span
        class="MuiTouchRipple-root"
      />
    </div>
    <div
      aria-disabled="false"
      class="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-button"
      role="button"
      tabindex="0"
    >
      <div
        class="SearchAssetResults-icon-1"
      />
      <div
        class="MuiListItemText-root MuiListItemText-multiline"
      >
        <p
          class="MuiTypography-root MuiTypography-button"
        >
          Binance USD
        </p>
        <span
          class="MuiTypography-root MuiTypography-caption"
        >
          BUSD
        </span>
      </div>
      <span
        class="MuiTouchRipple-root"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
